--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "normalize.css": "^8.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "6",
+    "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
     "sass": "^1.81.1",
     "web-vitals": "^2.1.4"
