--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
+    "react-syntax-highlighter": "^15.6.1",
     "react-tsparticles": "^2.12.2",
     "sass": "^1.81.1",
     "tsparticles-slim": "^2.12.0",
